--- a/demos/simple-storage/dapp/public/index.html
+++ b/demos/simple-storage/dapp/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web3API simplestorage.eth Demo"
+      content="Web3API api.simplestorage.eth Demo"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Web3API: simplestorage.eth Demo</title>
+    <title>Web3API: api.simplestorage.eth Demo</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
